# bity-interface

./: .dockerignore  .env.sample  .gitignore  Cargo.toml  README.md  bity_config.json  bity_config.sample.json  compose.yml  config.js  index.html  package-lock.json  package.json  server.js
.docker/: Dockerfile
.github/workflows/: build.yml  test.yml
assets/: 403.css  403.html  bity.css  index.css  index.html  markdown-styles.css  service_availability.css  service_availability.html  service_unavailable.css  terms.css  terms.html  terms.md  terms_refused.css  terms_refused.html
src/: client_config.rs  error.rs  ip_check.rs  main.rs  shutdown.rs  utils.rs
