[package]
name = "nym-exchange"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6.0-rc.5", features = ["json", "headers"] }
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.3.0", features = ["cors", "trace", "auth", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3.0", features = ['env-filter'] }
dotenv = "0.15.0"
anyhow = "1.0"
maxminddb = "0.23.0"
